# MoMiChat

./: .dockerignore  .env.example  .gitignore  Dockerfile.api  Dockerfile.bot  LICENSE.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
bots/telegram/: app.py
deploy/: docker-compose.infra.yml  docker-compose.prod.yml  momichat-api.service  momichat-bot.service  momichat-ui.service  nginx.conf  setup_ec2.sh
docs/: api.md  architecture.md  deployment.md  installation.md
src/momichat/: config.py  main.py
src/momichat/adapters/: __init__.py  base.py  telegram.py
src/momichat/ai/: agent.py  knowledge.py  tools.py
src/momichat/api/v1/: router.py
src/momichat/api/v1/endpoints/: webhooks.py
src/momichat/core/: database.py
src/momichat/models/: __init__.py  order.py  user.py
src/momichat/services/: cart_service.py  command_service.py  memory_service.py  order_service.py  payment_service.py
src/momichat/ui/: app.py
src/momichat/utils/: formatting.py
