[project]
name = "momichat"
version = "0.1.0"
description = "MoMiChat - Conversational AI Milk Tea Bot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg[binary]>=3.1.0",
    "redis>=5.0.0",
    "langchain>=0.1.13",
    "langchain-openai>=0.1.1",
    "langchain-google-genai>=1.0.1",
    "chromadb>=0.4.24",
    "httpx>=0.27.0",
    "streamlit>=1.32.2",
    "pandas>=2.2.1",
    "sentence-transformers>=2.5.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
